# cryptoforecaster

./: README.md  config.yaml  pyproject.toml  requirements.txt  tuning.yaml
analysis/: tuning.ipynb
data/: ETH.csv  google_trends.csv
results/: test.csv  tuning.csv
src/: cli.py
src/utils/: config.py  data_preparation.py  data_preprocessing.py  evaluation.py  models.py  plotting.py
