[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotrading-ml"
version = "0.1"
description = "Machine Learning for Cryptocurrency Trading"
authors = [{ name = "Dominic Reichl", email = "office@dominicreichl.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.2",
    "click==8.1.7",
    "scikit-learn==1.3.2",
    "tensorflow-cpu==2.14.1",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "optuna==3.5.0",
    "ta==0.11.0",
    "python-bitvavo-api==1.2.3",
    "pytrends==4.9.2",
    "ipykernel==6.27.1",
]

[project.scripts]
cf = "cli:cli"
